k8s/image-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: image-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: image-service
  template:
    metadata:
      labels:
        app: image-service
    spec:
      containers:
        - name: image-service
          image: matt91320/image-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3001
