k8s/image-service.yml
apiVersion: v1
kind: Service
metadata:
  name: image-service
spec:
  selector:
    app: image-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001
  type: NodePort
