k8s/destination-rules.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: pdf-service-lb
spec:
  host: pdf-service
  trafficPolicy:
    loadBalancer:
      simple: LEAST_CONN

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: image-service-lb
spec:
  host: image-service
  trafficPolicy:
    loadBalancer:
      simple: LEAST_CONN
