k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /pdf(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: pdf-service
                port:
                  number: 80
          - path: /image(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: image-service
                port:
                  number: 80
