k8s/ingress2.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: myservice.info
      http:
        paths:
          - path: /pdf
            pathType: Prefix
            backend:
              service:
                name: pdf-service
                port:
                  number: 80
