k8s/virtual-services.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: my-virtualservice
spec:
  hosts:
    - "*"
  gateways:
    - my-gateway
  http:
    - match:
        - uri:
            prefix: /pdf
      rewrite:
        uriRegexRewrite:
          match: "^/pdf(/.*)?"
          rewrite: "\\1"
      route:
        - destination:
            host: pdf-service
            port:
              number: 80
    - match:
        - uri:
            prefix: /image
      rewrite:
        uriRegexRewrite:
          match: "^/image(/.*)?"
          rewrite: "\\1"
      route:
        - destination:
            host: image-service
            port:
              number: 80
