k8s/virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app-virtualservice
spec:
  hosts:
    - "*" # Replace with your actual host if needed
  gateways:
    - app-gateway
  http:
    - match:
        - uri:
            regex: /pdf(/|$)(.*)
      route:
        - destination:
            host: pdf-service
            port:
              number: 80
    - match:
        - uri:
            regex: /image(/|$)(.*)
      route:
        - destination:
            host: image-service
            port:
              number: 80
